--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,15 +1,11 @@
 FROM node:22-alpine
 
-WORKDIR /
+WORKDIR /app
 
 COPY package*.json ./
-
 RUN npm install
 
 COPY . .
 
-RUN npm run build
-
 EXPOSE 3000
-
-CMD [ "npm", "start" ]
+CMD ["npm", "run", "dev"]
