--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -1,9 +1,8 @@
 FROM node:22-alpine
 
-WORKDIR /
+WORKDIR /app
 
 COPY package*.json ./
-
 RUN npm install
 
 COPY . .
@@ -11,5 +10,4 @@ COPY . .
 RUN npx prisma generate
 
 EXPOSE 4006
-
-CMD [ "npm", "start" ]
+CMD ["npm", "run", "dev"]
