--- a/.github/workflows/backend-cicd.yml
+++ b/.github/workflows/backend-cicd.yml
@@ -9,11 +9,11 @@ on:
       - "docker-compose.prod.yml"
 
 jobs:
-  backend-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout Code
+      # 1. Checkout code
       - name: Checkout Repo
         uses: actions/checkout@v4
 
@@ -36,19 +36,31 @@ jobs:
         working-directory: ./server
         run: npm test || echo "No tests found"
 
-      # 4. Deploy to EC2
-      - name: Deploy Backend to EC2
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            cd ${{ secrets.EC2_PATH }}
-            git pull origin main
+      # 4. Login to Docker Hub
+      - name: Login to Docker Hub
+        run: |
+          docker login \
+            -u ${{ secrets.DOCKER_USERNAME }} \
+            -p ${{ secrets.DOCKER_PASSWORD }}
 
-            docker compose -f docker-compose.prod.yml stop server
-            docker compose -f docker-compose.prod.yml build server
-            docker compose -f docker-compose.prod.yml up -d server
+      # 5. Build & Push Docker Image
+      - name: Build & Push Backend Image
+        run: |
+          docker build \
+            -t lazydeveloperakash/bid-backend:latest \
+            -f server/Dockerfile.prod \
+            server
 
-            docker image prune -f
+          docker push lazydeveloperakash/bid-backend:latest
+
+  deploy:
+    needs: build
+    runs-on: aws-ec2-buyer-seller
+
+    steps:
+      - name: Pull latest backend image
+        run: docker pull lazydeveloperakash/bid-backend:latest
+
+      - name: Restart backend container
+        run: |
+          docker compose -f docker-compose.prod.yml up -d server
