--- a/server/Dockerfile.prod
+++ b/server/Dockerfile.prod
@@ -1,31 +1,16 @@
-FROM node:22-alpine AS builder
-
-WORKDIR /app
-COPY package.json package-lock.json ./
-
-# Install deps (clean & reproducible)
-RUN npm ci
-
-COPY . .
-
-RUN npx prisma generate
-
-RUN npm run build
-
 FROM node:22-alpine
 
 WORKDIR /app
 
-ENV NODE_ENV=production
+# Install dependencies
+COPY package*.json ./
+RUN npm ci --only=production
 
-# Copy only required files from builder
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/package.json ./package.json
-COPY --from=builder /app/prisma ./prisma
+# Copy source code
+COPY . .
 
 # Expose backend port
 EXPOSE 4006
 
 # Start app
-CMD ["node", "dist/index.js"]
+CMD ["npm", "start"]
