--- a/.github/workflows/backend-cicd.yml
+++ b/.github/workflows/backend-cicd.yml
@@ -58,6 +58,9 @@ jobs:
     runs-on: [self-hosted, Linux, X64]
 
     steps:
+      - name: Navigate
+        run: cd project-Bid
+        
       - name: Pull latest backend image
         run: docker pull lazydeveloperakash/bid-backend:latest
 
