--- a/server/Dockerfile.prod
+++ b/server/Dockerfile.prod
@@ -1,16 +1,26 @@
+# -------- Build Stage --------
+FROM node:22-alpine AS builder
+
+WORKDIR /app
+
+COPY package*.json ./
+RUN npm ci
+
+COPY . .
+
+# Generate Prisma client
+RUN npx prisma generate
+
+# -------- Runtime Stage --------
 FROM node:22-alpine
 
 WORKDIR /app
 
-# Install dependencies
-COPY package*.json ./
-RUN npm ci --only=production
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/src ./src
+COPY --from=builder /app/prisma ./prisma
+COPY --from=builder /app/package*.json ./
 
-# Copy source code
-COPY . .
-
-# Expose backend port
 EXPOSE 4006
 
-# Start app
-CMD ["npm", "start"]
+CMD ["npm", "run", "start"]
