--- a/.github/workflows/frontend-cicd.yml
+++ b/.github/workflows/frontend-cicd.yml
@@ -9,11 +9,11 @@ on:
       - "docker-compose.prod.yml"
 
 jobs:
-  frontend-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout Code
+      # 1. Checkout code
       - name: Checkout Repo
         uses: actions/checkout@v4
 
@@ -36,19 +36,31 @@ jobs:
         working-directory: ./client
         run: npm test || echo "No tests found"
 
-      # 4. Deploy to EC2
-      - name: Deploy Frontend to EC2
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            cd ${{ secrets.EC2_PATH }}
-            git pull origin main
+      # 4. Login to Docker Hub
+      - name: Login to Docker Hub
+        run: |
+          docker login \
+            -u ${{ secrets.DOCKER_USERNAME }} \
+            -p ${{ secrets.DOCKER_PASSWORD }}
 
-            docker compose -f docker-compose.prod.yml stop client
-            docker compose -f docker-compose.prod.yml build client
-            docker compose -f docker-compose.prod.yml up -d client
+      # 5. Build & Push Frontend Image
+      - name: Build & Push Frontend Image
+        run: |
+          docker build \
+            -t lazydeveloperakash/bid-frontend:latest \
+            -f client/Dockerfile.prod \
+            client
 
-            docker image prune -f
+          docker push lazydeveloperakash/bid-frontend:latest
+
+  deploy:
+    needs: build
+    runs-on: [self-hosted, Linux, X64]
+
+    steps:
+      - name: Pull latest frontend image
+        run: docker pull lazydeveloperakash/bid-frontend:latest
+
+      - name: Restart frontend container
+        run: |
+          docker compose -f docker-compose.prod.yml up -d client
