--- a/client/Dockerfile.prod
+++ b/client/Dockerfile.prod
@@ -1,4 +1,4 @@
-# ---- Build ----
+# ---------- Build ----------
 FROM node:22-alpine AS builder
 
 WORKDIR /app
@@ -9,12 +9,19 @@ RUN npm ci
 COPY . .
 RUN npm run build
 
-# ---- Run ----
+# ---------- Run ----------
 FROM node:22-alpine
 
 WORKDIR /app
 
-COPY --from=builder /app ./
+ENV NODE_ENV=production
+
+COPY --from=builder /app/package*.json ./
+RUN npm ci --production
+
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/next.config.js ./
 
 EXPOSE 3000
-CMD ["npm", "run", "start"]
+CMD ["npm", "start"]
